<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bankerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banker"
                    android:textColor="#E5E5E5"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/bankerScoreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/banker_score"
                    android:textColor="#E5E5E5"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/bankerPointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banker_points"
                android:textColor="#E5E5E5" />

            <LinearLayout
                android:id="@+id/bankerCardLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/graczTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gracz"
                    android:textColor="#E5E5E5"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/playerScoreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/player_score"
                    android:textColor="#E5E5E5"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/playerPointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/player_points"
                android:textColor="#E5E5E5" />

            <LinearLayout
                android:id="@+id/playerCardLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/passButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:visibility="invisible"
                    app:backgroundTint="#43AA8B"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="next"
                    android:visibility="invisible"
                    app:backgroundTint="#43AA8B"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/addPlayerCardButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_card"
                    android:visibility="invisible"
                    app:backgroundTint="#43AA8B"
                    tools:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>